--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "awesome-vue-star-rating": "^1.0.9",
         "daisyui": "^2.25.0",
         "flowbite": "^1.5.3",
+        "laravel-vue-pagination": "^3.0.0",
+        "vue-awesome-paginate": "^1.0.23",
         "vue-router": "^4.1.5",
         "vue-star-rating": "^2.1.0",
         "vuex": "^4.0.2"
